--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ url: "http://www.liuchengxu.org" # the base hostname & protocol for your site
 twitter_username:
 github_username:  liuchengxu
 disqus_username:
+google_analytics: UA-73260325-1
 
 # Build settings
 markdown: kramdown
